# wasteland-tarot-app

./: .dockerignore  .env.local.example  .env.production.example  .env.zeabur.example  .gitattributes  .gitignore  AI_INTERPRETATION_IMPLEMENTATION.md  ANIMATED_LIST_MIGRATION.md  ARCHITECTURAL_REVIEW.md  AUDIO_SYSTEM_README.md  BACKEND_HEALTH_CHECK.md  CHANGELOG.md  CHIRP3_AUDIO_FIXES.md  CHIRP3_AUDIO_SYSTEM_FIXES.md  CHIRP3_COMPLETE_FIX.md  CHIRP3_FIXES_COMPLETE.md  CHIRP3_FIXES_SUMMARY.md  CHIRP3_LANGUAGE_FIX.md  CHIRP3_TEST_PAGE_SUMMARY.md  CHIRP3_修復完成報告.md  CHIRP3_測試指南.md  CLAUDE.md  CLEANUP_SUMMARY.md  CORS_FIX_NEXT_STEPS.md  CORS_FIX_QUICK_REFERENCE.md  CORS_FIX_REPORT.md  DOCKER_DEPLOYMENT_PLAN.md  DOTO_EXAMPLES.tsx  Dockerfile.frontend  GEMINI.md  GLOBALS_CSS_ANIMATION_CLEANUP_SUMMARY.md  GOOGLE_CLOUD_TTS_SETUP.md  HTTPS-SETUP.md  MANUAL_TESTING_GUIDE.md  MOBILE_LAYOUT_PHASE1_COMPLETE.md  MOBILE_LAYOUT_PHASE2_COMPLETE.md  MOBILE_LAYOUT_PHASE3_COMPLETE.md  MOBILE_LAYOUT_PHASE5_COMPLETE.md  MUSIC_PLAYER_CHANGES_SUMMARY.md  MUSIC_PLAYER_DEBUG.md  (+88 more)
.ai-rules/: product.md  (+2 more)
backend/: .coverage  .dockerignore  .env.example  .env.test  AI_IMPLEMENTATION_SUMMARY.md  AI_INTERPRETATION_EXAMPLES.md  AI_MULTI_PROVIDER_IMPLEMENTATION.md  AI_QUICK_START.md  AI_RHYTHM_GENERATION_IMPLEMENTATION.md  AI_SETUP_GUIDE.md  ANALYTICS_IMPLEMENTATION_SUMMARY.md  API_README.md  BACKEND_TEST_REPORT.md  BINGO_API_IMPLEMENTATION.md  CHIRP3_CONFIGURATION.md  COMPLETE_BACKEND_SUMMARY.md  COMPREHENSIVE_TEST_SUMMARY.md  COMPREHENSIVE_VALIDATION_REPORT.md  CRON_SETUP.md  DATABASE_MIGRATION_GUIDE.md  DEPLOY_RLS_MIGRATION.md  Dockerfile  ENHANCED_TEST_SUMMARY.md  EXECUTE_CASCADE_FIX.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  MEMORY_OPTIMIZATION_PLAN.md  MEMORY_OPTIMIZATION_QUICKSTART.md  MEMORY_OPTIMIZATION_SUMMARY.md  MEMORY_OPTIMIZATION_TEST_RESULTS.md  MONITORING_LOGGING_SETUP.md  OAUTH_INTEGRATION_COMPLETE.md  OAUTH_INTEGRATION_PROGRESS.md  OPTIMIZATION_PHASE1_COMPLETE.md  OPTIMIZATION_PHASE2_COMPLETE.md  OPTIMIZATION_QUICK_START.md  OPTIMIZATION_SUCCESS.txt  P1_P2_COMPLETION_REPORT.md  P1_UUID_FIX_INSTRUCTIONS.md  PASSKEYS_BACKEND_COMPLETE.md  (+187 more)
backend/alembic/: env.py
backend/alembic/versions/: 001_add_performance_indexes.py  002_create_analytics_tables.py  003_create_bingo_game_tables.py  004_migrate_to_supabase_auth.py  005_add_oauth_support.py  006_add_webauthn_support.py  007_fix_wasteland_cards_schema.py  1ae75f9f8af6_remove_tags_from_tables.py  20251010_add_rls_policies_reading_tables.py  20251022_add_achievement_system_tables.py  20251103_fbty3l2akl9v_create_user_karma_table.py  20251104_101814_add_story_to_audio_type_enum.py  20251104_gpql23ivbb2v_upgrade_user_karma_dual_score.py  20251105_add_standard_tarot_names.py  2dd503a9f1d6_create_reading_journals_table.py  3118c80c0ade_sync_models_with_database_uuid_types.py  3dc09dba0617_fix_reading_sessions_uuid_and_fk.py  429eefbfe0a5_add_passkey_prompt_tracking_fields.py  449ca7bda63d_add_share_token_to_completed_readings.py  5952ef20305d_rename_reading_session_id_to_completed_.py  5a51727110a2_merge_reading_journals_and_audio_url_.py  609b4642ae8e_create_session_events_table.py  62677bc25018_add_ai_interpretation_tracking_to_.py  (+21 more)
backend/app/: __init__.py  config.py  main.py  main_music.py  main_simple.py
backend/docs/: AUDIO_QUALITY_ASSESSMENT.md  CHIRP3_DISABLE_FALLBACK_GUIDE.md  CHIRP3_ENV_VARIABLES.md  CHIRP3_PHASE4_SUMMARY.md  CHIRP3_PHASE5_SUMMARY.md  CHIRP3_ROLLBACK_PROCEDURE.md  CHIRP3_ROLLOUT_PLAN.md  CHIRP3_ROLLOUT_QUICK_START.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  GRAFANA_DASHBOARD_GUIDE.md  RLS_POLICIES.md  TTS_METRICS.md  TTS_TROUBLESHOOTING.md  WAVENET_CODE_CLEANUP_GUIDE.md  chirp3_voice_mapping.md  stage-16-implementation-summary.md  tts_service.md  zh-tw-glossary.md
backend/monitoring/: grafana-chirp3-dashboard.json
backend/scripts/: analyze_phase5_results.py  backfill_user_achievements.py  check_env.py  check_interpretations.py  execute_migrations.py  execute_phase5_manual_test.py  execute_prompt_update.py  generate_audio_samples.py  monitor_chirp3_rollout.py  run_achievement_seeds.py  test_card_voices.py  test_music_player_integration.py  test_supabase_connection.py  update_standard_tarot_names.py  update_standard_tarot_names.sql  verify_achievement_database.py  verify_deployment.py  verify_prompt_content_integrity.py  verify_prompt_content_quality.py
backend/tests/: CHIRP3_TEST_SUMMARY.md  __init__.py  api_comprehensive_test.py  conftest.py  factories.py  monitoring_verification.py  monitoring_verification_simple.sh  test_api_endpoints_comprehensive.py  test_api_live.py  test_card_data_integrity.py  test_cors_configuration.py  test_database_connection.py  test_error_handling.py  test_query_parameters.py  test_runner.py  test_swagger_ui.py  test_timezone_util.py  test_unified_karma_service.py
backend/tools/: check_missing_commits.py  comprehensive_api_test.py  db_schema_check.py  quick_fix_session_management.md
(+2030 files in other folders)
